# rust-connector-api

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/grid_queries/: Cargo.toml
examples/grid_queries/src/: main.rs
examples/netcdf_queries/: Cargo.toml
examples/netcdf_queries/src/: main.rs
examples/point_queries/: Cargo.toml
examples/point_queries/src/: main.rs
meteomatics/: Cargo.toml  README.md
meteomatics/examples/: 00_timeseries.rs  01_pivoted_grid.rs  02_unpivoted_grid.rs  03_grid_timeseries.rs  04_grid_png.rs  05_lightning_strokes.rs  06_netcdf.rs  13_parallel.rs  point_query.rs
meteomatics/src/: client.rs  errors.rs  lib.rs  location.rs  util.rs
meteomatics/tests/: integration_test.rs
src/: client.rs  errors.rs  lib.rs  location.rs
src/configuration/: api_client.rs
src/connector_components/: format.rs  location.rs  locations.rs  mod.rs  optionals.rs  parameters.rs  valid_date_time.rs
src/entities/: connector_error.rs  connector_response.rs  mod.rs
src/setup/: meteomatics_client.rs  mod.rs
tests/: integration_test.rs
