[package]
name = "rust-connector-api"
version = "0.1.0"
edition = "2018"
authors = ["Meteomatics"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
url = "2.2.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
