[package]
name = "rust-connector-api"
version = "0.1.0"
edition = "2018"
authors = ["Meteomatics"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
url = "2"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21"
chrono = "0.4"
thiserror = "1.0"
polars = "0.21.1"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.81"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
netcdf = "0.7.0"
dotenv = "0.15.0"
png = "0.17.5"